--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="twitter:description" content="Full-Stack Software Engineer specializing in modern web and mobile technologies." />
 
     <!-- Favicon -->
-    <link rel="icon" href="/placeholder.svg" type="image/svg+xml" />
+    <link rel="icon" href="/logo.png" type="image/svg+xml" />
     
     <!-- Preload fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
