feat: improve SEO and update contact information

--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Darpan Neve - Full-Stack Software Engineer</title>
-    <meta name="description" content="Darpan Neve - Full-Stack Software Engineer specializing in JavaScript, Python, React, Flutter, and modern web technologies. Building innovative solutions with 7+ projects and 600+ DSA problems solved." />
+    <meta name="description" content="Hire Darpan Neve, a freelance full-stack developer and software engineer specializing in JavaScript, Python, React, Node.js, and more. Get top-tier web and mobile development services." />
     <meta name="author" content="Darpan Neve" />
-    <meta name="keywords" content="Full-Stack Developer, Software Engineer, JavaScript, Python, React, Flutter, Node.js, AWS, Mobile App Development" />
+    <meta name="keywords" content="freelance full stack developer, full stack developer, software engineer, web developer, mobile app developer, react developer, node.js developer, python developer, javascript developer, hire full stack developer, hire web developer, hire mobile app developer" />
 
     <!-- Open Graph -->
     <meta property="og:title" content="Darpan Neve - Full-Stack Software Engineer" />
-    <meta property="og:description" content="Full-Stack Software Engineer specializing in modern web and mobile technologies. Let's build something amazing together!" />
+    <meta property="og:description" content="Hire Darpan Neve, a freelance full-stack developer and software engineer specializing in JavaScript, Python, React, Node.js, and more. Get top-tier web and mobile development services." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://darpanneve.dev" />
+    <meta property="og:url" content="https://darpan.neveconsultancy.in" />
+    <meta property="og:image" content="https://darpan.neveconsultancy.in/logo.png" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Darpan Neve - Full-Stack Software Engineer" />
-    <meta name="twitter:description" content="Full-Stack Software Engineer specializing in modern web and mobile technologies." />
+    <meta name="twitter:description" content="Hire Darpan Neve, a freelance full-stack developer and software engineer specializing in JavaScript, Python, React, Node.js, and more. Get top-tier web and mobile development services." />
+    <meta name="twitter:image" content="https://darpan.neveconsultancy.in/logo.png" />
 
     <!-- Favicon -->
     <link rel="icon" href="/logo.png" type="image/svg+xml" />
@@ -26,6 +28,28 @@
     <!-- Preload fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Darpan Neve",
+      "url": "https://darpan.neveconsultancy.in",
+      "sameAs": [
+        "https://www.linkedin.com/in/darpan-neve/",
+        "https://github.com/Darpanss"
+      ],
+      "jobTitle": "Full-Stack Software Engineer",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Freelancer"
+      },
+      "description": "Darpan Neve is a freelance full-stack software engineer with expertise in JavaScript, Python, React, and Node.js. Available for freelance projects and job opportunities.",
+      "image": "https://darpan.neveconsultancy.in/logo.png",
+      "email": "darpanneve3@gmail.com"
+    }
+    </script>
   </head>
 
   <body>
