--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Darpan Neve - Full-Stack Software Engineer</title>
-    <meta name="description" content="Hire Darpan Neve, a freelance full-stack developer and software engineer specializing in JavaScript, Python, React, Node.js, and more. Get top-tier web and mobile development services." />
+    <title>Darpan Neve - Freelance Full-Stack Developer | React, Node.js, Python</title>
+    <meta name="description" content="Darpan Neve is a freelance full-stack developer and software engineer specializing in React, Node.js, Python, and more. Hire Darpan for top-tier web and mobile development services." />
     <meta name="author" content="Darpan Neve" />
-    <meta name="keywords" content="freelance full stack developer, full stack developer, software engineer, web developer, mobile app developer, react developer, node.js developer, python developer, javascript developer, hire full stack developer, hire web developer, hire mobile app developer" />
+    <meta name="keywords" content="Darpan, Darpan Neve, freelance full stack developer, full stack developer, software engineer, web developer, mobile app developer, react developer, node.js developer, python developer, javascript developer, hire full stack developer, hire web developer, hire mobile app developer" />
+    <link rel="canonical" href="https://darpanneve.com" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Darpan Neve - Full-Stack Software Engineer" />
-    <meta property="og:description" content="Hire Darpan Neve, a freelance full-stack developer and software engineer specializing in JavaScript, Python, React, Node.js, and more. Get top-tier web and mobile development services." />
+    <meta property="og:title" content="Darpan Neve - Freelance Full-Stack Developer" />
+    <meta property="og:description" content="Hire Darpan Neve, a freelance full-stack developer specializing in React, Node.js, and Python." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://darpan.neveconsultancy.in" />
-    <meta property="og:image" content="https://darpan.neveconsultancy.in/logo.png" />
+    <meta property="og:url" content="https://darpanneve.com" />
+    <meta property="og:image" content="https://darpanneve.com/logo.png" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Darpan Neve - Full-Stack Software Engineer" />
-    <meta name="twitter:description" content="Hire Darpan Neve, a freelance full-stack developer and software engineer specializing in JavaScript, Python, React, Node.js, and more. Get top-tier web and mobile development services." />
-    <meta name="twitter:image" content="https://darpan.neveconsultancy.in/logo.png" />
+    <meta name="twitter:title" content="Darpan Neve - Freelance Full-Stack Developer" />
+    <meta name="twitter:description" content="Hire Darpan Neve, a freelance full-stack developer specializing in React, Node.js, and Python." />
+    <meta name="twitter:image" content="https://darpanneve.com/logo.png" />
 
     <!-- Favicon -->
     <link rel="icon" href="/logo.png" type="image/svg+xml" />
@@ -35,7 +36,7 @@
       "@context": "https://schema.org",
       "@type": "Person",
       "name": "Darpan Neve",
-      "url": "https://darpan.neveconsultancy.in",
+      "url": "https://darpanneve.com",
       "sameAs": [
         "https://www.linkedin.com/in/darpan-neve/",
         "https://github.com/Darpanss"
@@ -46,7 +47,7 @@
         "name": "Freelancer"
       },
       "description": "Darpan Neve is a freelance full-stack software engineer with expertise in JavaScript, Python, React, and Node.js. Available for freelance projects and job opportunities.",
-      "image": "https://darpan.neveconsultancy.in/logo.png",
+      "image": "https://darpanneve.com/logo.png",
       "email": "darpanneve3@gmail.com"
     }
     </script>
