--- a/index.html
+++ b/index.html
@@ -1,60 +1,106 @@
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Darpan Neve - Freelance Full-Stack Developer | React, Node.js, Python</title>
-    <meta name="description" content="Darpan Neve is a freelance full-stack developer and software engineer specializing in React, Node.js, Python, and more. Hire Darpan for top-tier web and mobile development services." />
-    <meta name="author" content="Darpan Neve" />
-    <meta name="keywords" content="Darpan, Darpan Neve, freelance full stack developer, full stack developer, software engineer, web developer, mobile app developer, react developer, node.js developer, python developer, javascript developer, hire full stack developer, hire web developer, hire mobile app developer" />
-    <link rel="canonical" href="https://darpanneve.com" />
 
-    <!-- Open Graph -->
-    <meta property="og:title" content="Darpan Neve - Freelance Full-Stack Developer" />
-    <meta property="og:description" content="Hire Darpan Neve, a freelance full-stack developer specializing in React, Node.js, and Python." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://darpanneve.com" />
-    <meta property="og:image" content="https://darpanneve.com/logo.png" />
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Darpan Neve - Freelance Full-Stack Developer" />
-    <meta name="twitter:description" content="Hire Darpan Neve, a freelance full-stack developer specializing in React, Node.js, and Python." />
-    <meta name="twitter:image" content="https://darpanneve.com/logo.png" />
+  <!-- Primary SEO -->
+  <title>Darpan Neve — Freelance Full-Stack Developer (React · Node.js · Python)</title>
+  <meta name="description"
+    content="Portfolio of Darpan Neve — freelance full-stack developer. React, Node.js, Python, web & mobile apps. Hire for high-quality, production-ready development." />
+  <meta name="keywords"
+    content="Darpan Neve, Darpan, full stack developer, react developer, node.js developer, python developer, web developer, hire developer, portfolio" />
+  <meta name="author" content="Darpan Neve" />
+  <link rel="canonical" href="https://darpanneve.com/" />
 
-    <!-- Favicon -->
-    <link rel="icon" href="/logo.png" type="image/svg+xml" />
-    
-    <!-- Preload fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Social / Open Graph -->
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Darpan Neve — Freelance Full-Stack Developer" />
+  <meta property="og:description"
+    content="Portfolio of Darpan Neve — React, Node.js & Python developer. Available for freelance and contract work." />
+  <meta property="og:url" content="https://darpanneve.com/" />
+  <meta property="og:site_name" content="DarpanNeve" />
+  <meta property="og:image" content="https://darpanneve.com/og-image.png" />
+  <meta property="og:image:alt" content="Darpan Neve — Full-Stack Developer portrait / logo" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
-    <!-- Structured Data -->
-    <script type="application/ld+json">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@your_twitter_handle" />
+  <meta name="twitter:title" content="Darpan Neve — Freelance Full-Stack Developer" />
+  <meta name="twitter:description" content="Portfolio of Darpan Neve — React, Node.js & Python developer." />
+  <meta name="twitter:image" content="https://darpanneve.com/og-image.png" />
+
+  <!-- Icons & manifest -->
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <meta name="theme-color" content="#0ea5a2" />
+
+  <!-- Performance: preconnect/preload (adjust font & LCP image paths as needed) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preload" as="image" href="/hero-lcp.jpg" />
+
+  <!-- Google / Search Console verification placeholder -->
+  <!-- <meta name="google-site-verification" content="PASTE_VERIFICATION_CODE_HERE" /> -->
+
+  <!-- Structured Data: Website + Person -->
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "Person",
-      "name": "Darpan Neve",
-      "url": "https://darpanneve.com",
-      "sameAs": [
-        "https://www.linkedin.com/in/darpan-neve/",
-        "https://github.com/Darpanss"
-      ],
-      "jobTitle": "Full-Stack Software Engineer",
-      "worksFor": {
-        "@type": "Organization",
-        "name": "Freelancer"
-      },
-      "description": "Darpan Neve is a freelance full-stack software engineer with expertise in JavaScript, Python, React, and Node.js. Available for freelance projects and job opportunities.",
-      "image": "https://darpanneve.com/logo.png",
-      "email": "darpanneve3@gmail.com"
+      "@graph": [
+        {
+          "@type": "WebSite",
+          "@id": "https://darpanneve.com/#website",
+          "url": "https://darpanneve.com/",
+          "name": "Darpan Neve",
+          "publisher": {
+            "@id": "https://darpanneve.com/#person"
+          },
+          "potentialAction": {
+            "@type": "SearchAction",
+            "target": "https://darpanneve.com/?s={search_term_string}",
+            "query-input": "required name=search_term_string"
+          }
+        },
+        {
+          "@type": "Person",
+          "@id": "https://darpanneve.com/#person",
+          "name": "Darpan Neve",
+          "url": "https://darpanneve.com",
+          "jobTitle": "Full-Stack Developer",
+          "image": "https://darpanneve.com/logo.png",
+          "sameAs": [
+            "https://www.linkedin.com/in/darpan-neve/",
+            "https://github.com/Darpanss",
+            "https://www.instagram.com/your_instagram_if_any"
+          ],
+          "email": "mailto:darpanneve3@gmail.com",
+          "description": "Freelance full-stack developer specializing in React, Node.js, and Python."
+        }
+      ]
     }
     </script>
-  </head>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <!-- Basic anti-fragment to ensure search bots get the content if JavaScript fails -->
+  <noscript>
+    <meta http-equiv="refresh" content="0;url=/noscript.html">
+  </noscript>
+
+  <!-- Styles and fonts - adjust to match your build pipeline -->
+  <!-- If using external CSS replace href accordingly -->
+  <link rel="stylesheet" href="/styles.css" />
+</head>
+
+<body>
+  <div id="root"><!-- App mounts here --></div>
+
+  <!-- JS entry -->
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
