--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Primary SEO -->
   <title>Darpan Neve — Freelance Full-Stack Developer (React · Node.js · Python)</title>
   <meta name="description"
-    content="Portfolio of Darpan Neve — freelance full-stack developer. React, Node.js, Python, web & mobile apps. Hire for high-quality, production-ready development." />
+    content="Portfolio of Darpan Neve — full-stack developer. React, Node.js, Python, web & mobile apps. Hire for high-quality, production-ready development." />
   <meta name="keywords"
     content="Darpan Neve, Darpan, full stack developer, react developer, node.js developer, python developer, web developer, hire developer, portfolio" />
   <meta name="author" content="Darpan Neve" />
