--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <meta name="twitter:image" content="https://darpanneve.com/og-image.png" />
 
   <!-- Icons & manifest -->
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="/logo.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   <meta name="theme-color" content="#0ea5a2" />
 
