--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <!-- preconnect to speed up handshake -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <!-- use display=swap so text doesn't stay invisible -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
   <!-- Primary SEO -->
   <title>Darpan Neve — Freelance Full-Stack Developer (React · Node.js · Python)</title>
