website description improved

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
   <!-- Primary SEO -->
-  <title>Darpan Neve — Freelance Full-Stack Developer (React · Node.js · Python)</title>
+  <title>Darpan Neve — Full-Stack Developer (Flutter · React · Node.js · Python)</title>
   <meta name="description"
     content="Portfolio of Darpan Neve — full-stack developer. React, Node.js, Python, web & mobile apps. Hire for high-quality, production-ready development." />
   <meta name="keywords"
@@ -24,9 +24,9 @@
   <!-- Social / Open Graph -->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Darpan Neve — Freelance Full-Stack Developer" />
+  <meta property="og:title" content="Darpan Neve — Full-Stack Developer" />
   <meta property="og:description"
-    content="Portfolio of Darpan Neve — React, Node.js & Python developer. Available for freelance and contract work." />
+    content="Portfolio of Darpan Neve — React, Node.js & Python developer. Available for opening." />
   <meta property="og:url" content="https://darpanneve.com/" />
   <meta property="og:site_name" content="DarpanNeve" />
   <meta property="og:image" content="https://darpanneve.com/og-image.png" />
@@ -37,7 +37,7 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@your_twitter_handle" />
-  <meta name="twitter:title" content="Darpan Neve — Freelance Full-Stack Developer" />
+  <meta name="twitter:title" content="Darpan Neve — Full-Stack Developer" />
   <meta name="twitter:description" content="Portfolio of Darpan Neve — React, Node.js & Python developer." />
   <meta name="twitter:image" content="https://darpanneve.com/og-image.png" />
 
@@ -85,7 +85,7 @@
             "https://www.instagram.com/your_instagram_if_any"
           ],
           "email": "mailto:darpanneve3@gmail.com",
-          "description": "Freelance full-stack developer specializing in React, Node.js, and Python."
+          "description": "full-stack developer specializing in Flutter, React, Node.js, and Python."
         }
       ]
     }
